[package]
name = "haversine"
version = "0.2.1"
authors = ["Jeffrey Gilbert <visualjeff@linux.com>"]
description = "haversine implemented in rust"
documentation = "https://github.com/visualjeff/haversine"
homepage = "https://github.com/visualjeff/haversine"
repository = "https://github.com/visualjeff/haversine.git"
readme = "README.md"
keywords = ["haversine", "distance"]
license = "MIT"
license-file = "LICENSE"
